--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
+  <title>РљР°СЂСЃР°РєРѕРІР°, РРўРЎРЎ-Рћ-18</title>
 
-  <meta http-equiv="content-type" content="text/html;charset=windows-1251">
-  <title>Карсакова, ИТСС-О-18</title>
-
-
-  <meta name="Author" content="Карсакова ИТСС-О-18">
-
-  <meta name="description" content="Главная страница лабораторной №5">
-
-  <meta name="keywords" content="Лабораторные работы">
 
 </head>
 
@@ -24,18 +16,18 @@
 
     <tr>
 
-      <td font-size: large colspan="2" class="name_res" style="width: 100%; text-align: center; ">Лабораторные работы</td>
+      <td font-size: large colspan="2" class="name_res" style="width: 100%; text-align: center; ">Р›Р°Р±РѕСЂР°С‚РѕСЂРЅС‹Рµ СЂР°Р±РѕС‚С‹</td>
 
     </tr>
 
 
 
-<!-- вторая строка таблицы, в кот. меню в левой графе шириной 210px
-и основной текст в правой графе -->
+<!-- РІС‚РѕСЂР°СЏ СЃС‚СЂРѕРєР° С‚Р°Р±Р»РёС†С‹, РІ РєРѕС‚. РјРµРЅСЋ РІ Р»РµРІРѕР№ РіСЂР°С„Рµ С€РёСЂРёРЅРѕР№ 210px
+Рё РѕСЃРЅРѕРІРЅРѕР№ С‚РµРєСЃС‚ РІ РїСЂР°РІРѕР№ РіСЂР°С„Рµ -->
       <td class="leftcol" style="width: 210px; vertical-align: top; background-color: rgb(232, 255, 221);">
       <table bgcolor="#ffffff" border="0" cellspacing="2" width="99%">
 
-<!-- в этой маленькой таблице заголовок меню -->
+<!-- РІ СЌС‚РѕР№ РјР°Р»РµРЅСЊРєРѕР№ С‚Р°Р±Р»РёС†Рµ Р·Р°РіРѕР»РѕРІРѕРє РјРµРЅСЋ -->
          <tbody>
             <td>
              
@@ -43,31 +35,31 @@
 
           <tr class="sprav">
 
-            <td class="sprav"><span style="text-decoration: underline;">Отчеты по лабораторным работам.</span></td>
+            <td class="sprav"><span style="text-decoration: underline;">РћС‚С‡РµС‚С‹ РїРѕ Р»Р°Р±РѕСЂР°С‚РѕСЂРЅС‹Рј СЂР°Р±РѕС‚Р°Рј.</span></td>
 
           </tr>
 
         </tbody>
       </table>   
 
- <small><a href="lab1.html">Лабораторная работа №1</a></small>
-&nbsp; <small><a href="lab2.html">Лабораторная работа №2</a></small>
-&nbsp; <small><a href="lab7.html">Лабораторная работа №7</a></small>
+ <small><a href="lab1.html">Р›Р°Р±РѕСЂР°С‚РѕСЂРЅР°СЏ СЂР°Р±РѕС‚Р° в„–1</a></small>
+&nbsp; <small><a href="lab2.html">Р›Р°Р±РѕСЂР°С‚РѕСЂРЅР°СЏ СЂР°Р±РѕС‚Р° в„–2</a></small>
+&nbsp; <small><a href="lab7.html">Р›Р°Р±РѕСЂР°С‚РѕСЂРЅР°СЏ СЂР°Р±РѕС‚Р° в„–7</a></small>
 
 
       </td>
 
       <td class="info" style="width: 565px; vertical-align: top; background-color: rgb(250, 250, 255);"><br>
           <h2>ALT Linux</h2>
-ALT Linux (рус. Альт Линукс) — это семейство дистрибутивов Linux, являющихся отдельной ветвью развития русскоязычного Linux. В основном, дистрибутивы выпускаются компаниями «Базальт СПО» и «Альт Линукс», но фактического ограничения для выпуска дистрибутивов на основе репозиториев ALT не существует. Репозитории разрабатываются командой разработчиков ALT Linux Team, преимущественно русскоязычной. Большинство дистрибутивов Альт Линукс доступны для свободного скачивания.
-          <h2>История</h2>
-<p>В 1999—2000 годах дистрибутив, разрабатываемый будущим ядром ALT Linux Team, основывался на дистрибутиве MandrakeLinux и представлял собой его русскую версию (Linux-Mandrake Russian Edition).
-<p>Начиная с 2000 года началось замещение пакетов Mandrake собственными сборками, значительное изменение системы сборки и макросов пакетного менеджера RPM. К версии 3.0 (2005 год) все пакеты Mandrake, инсталлятор и система конфигурирования были полностью вытеснены собственными разработками ALT Linux Team. Сейчас дистрибутивы ALT Linux являются отдельной ветвью развития Linux и не имеют никакого отношения к Mandrake или Mandriva.
-<p>С сентября 2015 года поддержкой инфраструктуры Sisyphus занимается «Базальт СПО». Также, компанией «Базальт СПО» осуществлён выпуск коммерческих дистрибутивов Альт на базе восьмой платформы.
-<p>С ноября 2018 года выпускаются нативные сборки дистрибутивов с поддержкой процессоров Эльбрус.
-<h2>Дистрибутивы</h2>    
-<p>Дистрибутивы под товарным знаком «ALT Linux» выпускаются компанией «Альт Линукс». Компания «Базальт СПО» использует товарные знаки «Альт» и «BaseALT».</p>
-          <p>Первым дистрибутивом, выпущенным в рамках проекта ALT Linux Team, стал многоцелевой, предназначенный для решения самых разных задач Linux-Mandrake Spring 2001. Его основа была создана в компании IPLabs Linux Team, и он использовал многие разработки и товарный знак французской компании MandrakeSoft. В то же время, уже эта разработка весьма заметно отличалась от дистрибутива Mandrake. Линия универсальных дистрибутивов была продолжена в дистрибутивах ALT Linux Master[7]. В настоящий момент полностью универсальные дистрибутивы не выпускаются ввиду увеличения пакетной базы. Вместо этого выпускаются дистрибутивы, предназначенные для решения определённого круга задач. Так же существует некоторое количество дистрибутивов независимых разработчиков, выпускаемых на пакетных базах Sisyphus и стабильных веток.[8].
+ALT Linux (СЂСѓСЃ. РђР»СЊС‚ Р›РёРЅСѓРєСЃ) вЂ” СЌС‚Рѕ СЃРµРјРµР№СЃС‚РІРѕ РґРёСЃС‚СЂРёР±СѓС‚РёРІРѕРІ Linux, СЏРІР»СЏСЋС‰РёС…СЃСЏ РѕС‚РґРµР»СЊРЅРѕР№ РІРµС‚РІСЊСЋ СЂР°Р·РІРёС‚РёСЏ СЂСѓСЃСЃРєРѕСЏР·С‹С‡РЅРѕРіРѕ Linux. Р’ РѕСЃРЅРѕРІРЅРѕРј, РґРёСЃС‚СЂРёР±СѓС‚РёРІС‹ РІС‹РїСѓСЃРєР°СЋС‚СЃСЏ РєРѕРјРїР°РЅРёСЏРјРё В«Р‘Р°Р·Р°Р»СЊС‚ РЎРџРћВ» Рё В«РђР»СЊС‚ Р›РёРЅСѓРєСЃВ», РЅРѕ С„Р°РєС‚РёС‡РµСЃРєРѕРіРѕ РѕРіСЂР°РЅРёС‡РµРЅРёСЏ РґР»СЏ РІС‹РїСѓСЃРєР° РґРёСЃС‚СЂРёР±СѓС‚РёРІРѕРІ РЅР° РѕСЃРЅРѕРІРµ СЂРµРїРѕР·РёС‚РѕСЂРёРµРІ ALT РЅРµ СЃСѓС‰РµСЃС‚РІСѓРµС‚. Р РµРїРѕР·РёС‚РѕСЂРёРё СЂР°Р·СЂР°Р±Р°С‚С‹РІР°СЋС‚СЃСЏ РєРѕРјР°РЅРґРѕР№ СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРѕРІ ALT Linux Team, РїСЂРµРёРјСѓС‰РµСЃС‚РІРµРЅРЅРѕ СЂСѓСЃСЃРєРѕСЏР·С‹С‡РЅРѕР№. Р‘РѕР»СЊС€РёРЅСЃС‚РІРѕ РґРёСЃС‚СЂРёР±СѓС‚РёРІРѕРІ РђР»СЊС‚ Р›РёРЅСѓРєСЃ РґРѕСЃС‚СѓРїРЅС‹ РґР»СЏ СЃРІРѕР±РѕРґРЅРѕРіРѕ СЃРєР°С‡РёРІР°РЅРёСЏ.
+          <h2>РСЃС‚РѕСЂРёСЏ</h2>
+<p>Р’ 1999вЂ”2000 РіРѕРґР°С… РґРёСЃС‚СЂРёР±СѓС‚РёРІ, СЂР°Р·СЂР°Р±Р°С‚С‹РІР°РµРјС‹Р№ Р±СѓРґСѓС‰РёРј СЏРґСЂРѕРј ALT Linux Team, РѕСЃРЅРѕРІС‹РІР°Р»СЃСЏ РЅР° РґРёСЃС‚СЂРёР±СѓС‚РёРІРµ MandrakeLinux Рё РїСЂРµРґСЃС‚Р°РІР»СЏР» СЃРѕР±РѕР№ РµРіРѕ СЂСѓСЃСЃРєСѓСЋ РІРµСЂСЃРёСЋ (Linux-Mandrake Russian Edition).
+<p>РќР°С‡РёРЅР°СЏ СЃ 2000 РіРѕРґР° РЅР°С‡Р°Р»РѕСЃСЊ Р·Р°РјРµС‰РµРЅРёРµ РїР°РєРµС‚РѕРІ Mandrake СЃРѕР±СЃС‚РІРµРЅРЅС‹РјРё СЃР±РѕСЂРєР°РјРё, Р·РЅР°С‡РёС‚РµР»СЊРЅРѕРµ РёР·РјРµРЅРµРЅРёРµ СЃРёСЃС‚РµРјС‹ СЃР±РѕСЂРєРё Рё РјР°РєСЂРѕСЃРѕРІ РїР°РєРµС‚РЅРѕРіРѕ РјРµРЅРµРґР¶РµСЂР° RPM. Рљ РІРµСЂСЃРёРё 3.0 (2005 РіРѕРґ) РІСЃРµ РїР°РєРµС‚С‹ Mandrake, РёРЅСЃС‚Р°Р»Р»СЏС‚РѕСЂ Рё СЃРёСЃС‚РµРјР° РєРѕРЅС„РёРіСѓСЂРёСЂРѕРІР°РЅРёСЏ Р±С‹Р»Рё РїРѕР»РЅРѕСЃС‚СЊСЋ РІС‹С‚РµСЃРЅРµРЅС‹ СЃРѕР±СЃС‚РІРµРЅРЅС‹РјРё СЂР°Р·СЂР°Р±РѕС‚РєР°РјРё ALT Linux Team. РЎРµР№С‡Р°СЃ РґРёСЃС‚СЂРёР±СѓС‚РёРІС‹ ALT Linux СЏРІР»СЏСЋС‚СЃСЏ РѕС‚РґРµР»СЊРЅРѕР№ РІРµС‚РІСЊСЋ СЂР°Р·РІРёС‚РёСЏ Linux Рё РЅРµ РёРјРµСЋС‚ РЅРёРєР°РєРѕРіРѕ РѕС‚РЅРѕС€РµРЅРёСЏ Рє Mandrake РёР»Рё Mandriva.
+<p>РЎ СЃРµРЅС‚СЏР±СЂСЏ 2015 РіРѕРґР° РїРѕРґРґРµСЂР¶РєРѕР№ РёРЅС„СЂР°СЃС‚СЂСѓРєС‚СѓСЂС‹ Sisyphus Р·Р°РЅРёРјР°РµС‚СЃСЏ В«Р‘Р°Р·Р°Р»СЊС‚ РЎРџРћВ». РўР°РєР¶Рµ, РєРѕРјРїР°РЅРёРµР№ В«Р‘Р°Р·Р°Р»СЊС‚ РЎРџРћВ» РѕСЃСѓС‰РµСЃС‚РІР»С‘РЅ РІС‹РїСѓСЃРє РєРѕРјРјРµСЂС‡РµСЃРєРёС… РґРёСЃС‚СЂРёР±СѓС‚РёРІРѕРІ РђР»СЊС‚ РЅР° Р±Р°Р·Рµ РІРѕСЃСЊРјРѕР№ РїР»Р°С‚С„РѕСЂРјС‹.
+<p>РЎ РЅРѕСЏР±СЂСЏ 2018 РіРѕРґР° РІС‹РїСѓСЃРєР°СЋС‚СЃСЏ РЅР°С‚РёРІРЅС‹Рµ СЃР±РѕСЂРєРё РґРёСЃС‚СЂРёР±СѓС‚РёРІРѕРІ СЃ РїРѕРґРґРµСЂР¶РєРѕР№ РїСЂРѕС†РµСЃСЃРѕСЂРѕРІ Р­Р»СЊР±СЂСѓСЃ.
+<h2>Р”РёСЃС‚СЂРёР±СѓС‚РёРІС‹</h2>    
+<p>Р”РёСЃС‚СЂРёР±СѓС‚РёРІС‹ РїРѕРґ С‚РѕРІР°СЂРЅС‹Рј Р·РЅР°РєРѕРј В«ALT LinuxВ» РІС‹РїСѓСЃРєР°СЋС‚СЃСЏ РєРѕРјРїР°РЅРёРµР№ В«РђР»СЊС‚ Р›РёРЅСѓРєСЃВ». РљРѕРјРїР°РЅРёСЏ В«Р‘Р°Р·Р°Р»СЊС‚ РЎРџРћВ» РёСЃРїРѕР»СЊР·СѓРµС‚ С‚РѕРІР°СЂРЅС‹Рµ Р·РЅР°РєРё В«РђР»СЊС‚В» Рё В«BaseALTВ».</p>
+          <p>РџРµСЂРІС‹Рј РґРёСЃС‚СЂРёР±СѓС‚РёРІРѕРј, РІС‹РїСѓС‰РµРЅРЅС‹Рј РІ СЂР°РјРєР°С… РїСЂРѕРµРєС‚Р° ALT Linux Team, СЃС‚Р°Р» РјРЅРѕРіРѕС†РµР»РµРІРѕР№, РїСЂРµРґРЅР°Р·РЅР°С‡РµРЅРЅС‹Р№ РґР»СЏ СЂРµС€РµРЅРёСЏ СЃР°РјС‹С… СЂР°Р·РЅС‹С… Р·Р°РґР°С‡ Linux-Mandrake Spring 2001. Р•РіРѕ РѕСЃРЅРѕРІР° Р±С‹Р»Р° СЃРѕР·РґР°РЅР° РІ РєРѕРјРїР°РЅРёРё IPLabs Linux Team, Рё РѕРЅ РёСЃРїРѕР»СЊР·РѕРІР°Р» РјРЅРѕРіРёРµ СЂР°Р·СЂР°Р±РѕС‚РєРё Рё С‚РѕРІР°СЂРЅС‹Р№ Р·РЅР°Рє С„СЂР°РЅС†СѓР·СЃРєРѕР№ РєРѕРјРїР°РЅРёРё MandrakeSoft. Р’ С‚Рѕ Р¶Рµ РІСЂРµРјСЏ, СѓР¶Рµ СЌС‚Р° СЂР°Р·СЂР°Р±РѕС‚РєР° РІРµСЃСЊРјР° Р·Р°РјРµС‚РЅРѕ РѕС‚Р»РёС‡Р°Р»Р°СЃСЊ РѕС‚ РґРёСЃС‚СЂРёР±СѓС‚РёРІР° Mandrake. Р›РёРЅРёСЏ СѓРЅРёРІРµСЂСЃР°Р»СЊРЅС‹С… РґРёСЃС‚СЂРёР±СѓС‚РёРІРѕРІ Р±С‹Р»Р° РїСЂРѕРґРѕР»Р¶РµРЅР° РІ РґРёСЃС‚СЂРёР±СѓС‚РёРІР°С… ALT Linux Master[7]. Р’ РЅР°СЃС‚РѕСЏС‰РёР№ РјРѕРјРµРЅС‚ РїРѕР»РЅРѕСЃС‚СЊСЋ СѓРЅРёРІРµСЂСЃР°Р»СЊРЅС‹Рµ РґРёСЃС‚СЂРёР±СѓС‚РёРІС‹ РЅРµ РІС‹РїСѓСЃРєР°СЋС‚СЃСЏ РІРІРёРґСѓ СѓРІРµР»РёС‡РµРЅРёСЏ РїР°РєРµС‚РЅРѕР№ Р±Р°Р·С‹. Р’РјРµСЃС‚Рѕ СЌС‚РѕРіРѕ РІС‹РїСѓСЃРєР°СЋС‚СЃСЏ РґРёСЃС‚СЂРёР±СѓС‚РёРІС‹, РїСЂРµРґРЅР°Р·РЅР°С‡РµРЅРЅС‹Рµ РґР»СЏ СЂРµС€РµРЅРёСЏ РѕРїСЂРµРґРµР»С‘РЅРЅРѕРіРѕ РєСЂСѓРіР° Р·Р°РґР°С‡. РўР°Рє Р¶Рµ СЃСѓС‰РµСЃС‚РІСѓРµС‚ РЅРµРєРѕС‚РѕСЂРѕРµ РєРѕР»РёС‡РµСЃС‚РІРѕ РґРёСЃС‚СЂРёР±СѓС‚РёРІРѕРІ РЅРµР·Р°РІРёСЃРёРјС‹С… СЂР°Р·СЂР°Р±РѕС‚С‡РёРєРѕРІ, РІС‹РїСѓСЃРєР°РµРјС‹С… РЅР° РїР°РєРµС‚РЅС‹С… Р±Р°Р·Р°С… Sisyphus Рё СЃС‚Р°Р±РёР»СЊРЅС‹С… РІРµС‚РѕРє.[8].
       </td>
 
   </tbody>
@@ -83,7 +75,7 @@ ALT Linux (рус. Альт Линукс) — это семейство дистрибутивов Linux, являющихся отд
 <table border="0" cellpadding="3" cellspacing="0" height="70">
   <tbody>
     <tr>
-      <td valign="bottom"> <a href="mailto:kseen917@gmail.com">Электронная почта</a>
+      <td valign="bottom"> <a href="mailto:kseen917@gmail.com">Р­Р»РµРєС‚СЂРѕРЅРЅР°СЏ РїРѕС‡С‚Р°</a>
     </tr>
   </tbody>
 </table>
