--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
  <small><a href="lab1.html">Лабораторная работа №1</a></small>
 &nbsp; <small><a href="lab2.html">Лабораторная работа №2</a></small>
 &nbsp; <small><a href="lab7.html">Лабораторная работа №7</a></small>
+        &nbsp; <small><a href="streamrtmp.html">Трансляция</a></small>
 
 
       </td>
